--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,11 @@ alembic = "^1.15.2"
 psycopg2-binary = "^2.9.10"
 psycopg = "^3.2.6"
 greenlet = "^3.2.0"
+python-jose = "^3.4.0"
+passlib = "^1.7.4"
+pydantic = {extras = ["email"], version = "^2.11.3"}
+python-multipart = "^0.0.20"
+bcrypt = "^4.3.0"
 
 
 [build-system]
