add ai matching

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DB_URL=
-DB_ECHO=FALSE
+DB_ECHO=
 SECRET_KEY=your-secret-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=120
+YANDEX_FOLDER_ID=
+YANDEX_API_KEY=
