--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ pydantic = { extras = ["email"], version = "^2.11.3" }
 python-multipart = "^0.0.20"
 bcrypt = "^4.3.0"
 yandex-cloud-ml-sdk = "^0.9.0"
-asyncpg = "^0.30.0"
+asyncpg = "^0.29.0"
+aiogram = "^3.20.0.post0"
 
 
 [build-system]
