--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiofiles==24.1.0
 fastapi==0.111.0
 sqlalchemy==1.3.19
-psycopg2==2.8.6
+psycopg2-binary 
 python-dotenv==1.0.1
 uvicorn==0.30.1
 pydantic==2.8.2
