--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ bcrypt = "^4.3.0"
 yandex-cloud-ml-sdk = "^0.9.0"
 asyncpg = "^0.29.0"
 aiogram = "^3.20.0.post0"
+black = "^25.1.0"
 
 
 [build-system]
