--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,6 @@ services:
     depends_on:
       migrations:
         condition: service_completed_successfully
-    ports:
-      - "8010:8010"
     restart: always
     networks:
       - dormbuddy-network
@@ -34,6 +32,46 @@ services:
       migrations:
         condition: service_completed_successfully
     restart: always
+    networks:
+      - dormbuddy-network
+      - default
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: dormbuddy-frontend
+    restart: always
+    networks:
+      - dormbuddy-network
+      - default
+
+  nginx:
+    image: nginx:alpine
+    container_name: dormbuddy-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/ssl:/etc/nginx/ssl
+      - ./nginx/certbot/www:/var/www/certbot
+      - ./nginx/certbot/conf:/etc/letsencrypt
+    depends_on:
+      - app
+      - frontend
+    restart: always
+    networks:
+      - dormbuddy-network
+      - default
+
+  certbot:
+    image: certbot/certbot
+    container_name: dormbuddy-certbot
+    volumes:
+      - ./nginx/certbot/www:/var/www/certbot
+      - ./nginx/certbot/conf:/etc/letsencrypt
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
       - dormbuddy-network
       - default
