--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
 
   app:
     build: .
+    container_name: dormbuddy-backend
     command: runuser -u uvicorn -- /venv/bin/uvicorn src.main:app --app-dir /build --host 0.0.0.0 --port 8010 --workers 2 --loop uvloop
     environment:
       - DB_URL=postgresql+asyncpg://postgres:72ZGBYhaq+vLjzWtUatsKw==@db:5432/dormbuddy
@@ -46,35 +47,6 @@ services:
       - dormbuddy-network
       - default
 
-  nginx:
-    image: nginx:alpine
-    container_name: dormbuddy-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
-      - ./nginx/ssl:/etc/nginx/ssl
-      - ./nginx/certbot/www:/var/www/certbot
-      - ./nginx/certbot/conf:/etc/letsencrypt
-    depends_on:
-      - app
-      - frontend
-    restart: always
-    networks:
-      - dormbuddy-network
-      - default
-
-  certbot:
-    image: certbot/certbot
-    container_name: dormbuddy-certbot
-    volumes:
-      - ./nginx/certbot/www:/var/www/certbot
-      - ./nginx/certbot/conf:/etc/letsencrypt
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    networks:
-      - dormbuddy-network
-      - default
 
   db:
     image: postgres:16-alpine
